2004-07-13    <chromakode@fgdefault>

	* doc/TODO (Module): Added Keyboard tester todos

	* doc/HACKING, doc/TODO (Module): Added lib related stuff

2004-07-06    <chromakode@fgdefault>

	* fgdiag/floppytester.py (Module): Ported to API changes

	* fgdiag/pogotest.py (Module): Ported to API changes

	* fgdiag/lib/fgdb.py (Module): Database.disconnect()

	* fgdiag/lib/prompts.py (Module): Added device name/description to
	existing prompt.

	* fgdiag/lib/test.py (Module): Split API into run() and scan(),
	ask for IDs before running test.

	* fgdiag/nulltest.py (Module): Added Null Tester

	* fgdiag/pogotest.py (Module): Added comments on statuses

2004-06-08    <chromakode@llama>

	* fgdiag/lib/test.py (Module): Destinations, and instructions too.

2004-05-29  Kevin Turner  <kevin@freegeek.org>

	* doc/TODO: 1.3 add section on network devices (with netpipe),
	SMART drive testing.

2004-05-25    <chromakode@llama>

	* fgdiag/lib/test.py (Module): Rewrote status implementation.

	* fgdiag/lib/prompts.py (Module): No longer have extra newlines in lists.

2004-05-21    <chromakode@llama>

	* fgdiag/lib/prompts.py (Module): Added various prompts.

	* fgdiag/lib/test.py (Module): Allow user to create gizmos in test
	process, added final status report.

2004-05-20    <chromakode@llama>

	* fgdiag/lib/fgdb.py (Database.add_gizmo): Create Gizmos!

	* fgdiag/lib/logging.py (_LogReceptor): Made private

2004-05-18    <chromakode@llama>

	* fgdiag/lib/fgdb.py (Module): Major rewrite of SQL Generation code

2004-05-14    <chromakode@llama>

	* fgdiag/floppytest.py (Module): Created floppy drive tester, a
	port of the original shell script in testing/floppy.sh

2004-05-13    <chromakode@llama>

	* fgdiag/pogotest.py (Module): Modified to use testscript

	* fgdiag/lib/testscript.py: Added module for testing scripts to
	use, implements standalone features like command line argument parsing.

	* fgdiag/lib/logging.py (Module): Added TimeStamps to log